mulre/web/static/style.css
html {
    font-family: monospace;
}

pre {
    white-space: pre-wrap;
}

a {
    color: black;
}
header p, header h1 {
    display: inline-block;
}

.tags {
    padding-left: 0;
}

.tags li {
    display: inline-block;
}

.yarn > ul li {
    list-style: none;
}

.yarn > ul {
    padding-left: 0;
}

#content-form label, #content-form textarea {
    vertical-align: middle;
}

#hot p, #hot ul {
    display: inline-block;
}

article, fieldset {
    border: solid 1px;
    margin: 1rem 0;
    padding: 1rem;
}

.metadata li {
    display: inline-block;
}

.yarn-id::after, .action::after {
    content: ':';
}

img, textarea {
    max-width: 100%;
}

.dangerous {
    color: red;
}

